Create homogenous enpoint for entities (product/providers)
